--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,11 @@ dependencies:
   progress_dialog: ^1.2.2
   awesome_dialog: ^0.1.0
   shared_preferences: ^0.5.6+1
+  flutter_credit_card: 0.1.4
+  firebase_auth: ^0.14.0+5
+  cloud_firestore: ^0.12.9+4
+  provider: ^4.3.2+4
+  flutter_spinkit: "^4.1.2"
 
 dev_dependencies:
   flutter_test:
